--- a/research_doc_scratch.ipynb
+++ b/research_doc_scratch.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -31,24 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Category                                      Media and Other Open Sources\n",
-       "Resource                                           Aircraft Photo Websites\n",
-       "Use This Resource To:    Personal Finances\\n\\n - Identify aircraft owne...\n",
-       "Description              Planespotting enthusiasts take photos of airpl...\n",
-       "Link                                            JetPhotos\\nPlaneSpotters\\n\n",
+       "Category                                                               NaN\n",
+       "Resource                                                             4chan\n",
+       "Use This Resource To:    (you can scrape using 4plebs)\\nThis is an Engl...\n",
+       "Description                                                            NaN\n",
+       "Link                                                                   NaN\n",
        "Search Terms                                                           NaN\n",
        "Date Completed                                                         NaN\n",
        "Research Notes                                                         NaN\n",
-       "Name: 54, dtype: object"
+       "Name: 115, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,13 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('research-guide.txt','w') as f:\n",
     "    for o_idx, row in research_df.sort_values('Resource').iterrows():        \n",
-    "        print(f'## {row.Resource}',file=f)\n",
+    "        print(f'## {row.Resource}\\n',file=f)\n",
+    "        print(f'*{row.Category}*\\n',file=f)\n",
     "        if isinstance(row.Link,str):\n",
     "            link_list = [r for r in row.Link.split('\\n') if len(r) > 0]\n",
     "            print(f\"Links:\\n\",file=f)\n",
@@ -79,27 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                      https://tloxp.tlo.com/login\n",
-       "1     https://www.signalhire.com/login?utm_block=1\n",
-       "2             Will vary depending on jurisdiction.\n",
-       "3             Will vary depending on jurisdiction.\n",
-       "4             Will vary depending on jurisdiction.\n",
-       "                          ...                     \n",
-       "68                        https://www.youtube.com/\n",
-       "69     https://projects.propublica.org/politwoops/\n",
-       "70                                             NaN\n",
-       "71                                    Pimeyes.com \n",
-       "72                                Offline Resource\n",
-       "Name: Link, Length: 73, dtype: object"
+       "0                       https://tloxp.tlo.com/login\n",
+       "1      https://www.signalhire.com/login?utm_block=1\n",
+       "2              Will vary depending on jurisdiction.\n",
+       "3              Will vary depending on jurisdiction.\n",
+       "4              Will vary depending on jurisdiction.\n",
+       "                           ...                     \n",
+       "146                                             NaN\n",
+       "147                                             NaN\n",
+       "148                                             NaN\n",
+       "149                                             NaN\n",
+       "150                                             NaN\n",
+       "Name: Link, Length: 151, dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,10 +113,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Associated People\n",
+      "- Background and Family\n",
+      "- Civil Litigation and Criminal Cases\n",
+      "- Educational History\n",
+      "- Nonprofits\n",
+      "- Personal Finances\n",
+      "- Political History\n",
+      "- Professional History\n",
+      "- Social Media and Other Internet Sources\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Making the ToC: organization of the alphabetical list below it.\n",
+    "categories = [re.findall('(.+)\\n\\n -',s) for s in research_df['Use This Resource To:'] if isinstance(s,str)]\n",
+    "for p in np.unique([c for cc in categories for c in cc]):\n",
+    "    print(f'- {p}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# look at that: lots of misspellings, different labels for the same thing, overlap between categories. Looks like we need to clean up the spreadsheet before moving forward.\n",
+    "# \n",
+    "# That said, it should be straightforward to make a list of these categories and print all the resources that contain them."
+   ]
   }
  ],
  "metadata": {
